--- a/public/static/public/css/standard.css
+++ b/public/static/public/css/standard.css
@@ -213,3 +213,10 @@
 	}
 
 }
+
+.leaflet-container {
+	width: 100%;
+    height: 500px;
+    background-color: rgb(240,240,240);
+    border: 1px solid rgb(230,230,230);
+}
