--- a/public/templates/public/index.html
+++ b/public/templates/public/index.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="{% static "public/img/slide/marche.jpg" %}" alt="Second slide">
+          <img class="second-slide" src="{% static "public/img/slide/togo-1.jpg" %}" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Prix du marché</h1>
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="{% static "public/img/slide/faq.jpg" %}" alt="Third slide">
+          <img class="third-slide" src="{% static "public/img/slide/togo-2.jpg" %}" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Consultez note FAQ</h1>
