--- a/togohydromet/templates/admin/index.html
+++ b/togohydromet/templates/admin/index.html
@@ -10,23 +10,31 @@
 
 <div class="row-fluid">
 
-    <div class="span4" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
+    <div class="span3" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
             <img style="margin-right: 20px;" class="pull-left" src="{% static "public/img/weather-station.png" %}" width="100" hieght="100">
-            <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">23<br><small>Stations Actives</small></h1>
+            <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">{{ station_qt }}<br><small>Stations</small></h1>
             <hr>
-            <p style="text-align: center; margin:0"><a href="/admin/hydromet/station/">Gestion des Stations</a> | <a href="/admin/hydromet/observation/">Gestion des Observations</a> | <a href="/admin/hydromet/log/">Log</a></p>
+            <p style="text-align: center; margin:0"><a href="/admin/hydromet/station/">Gestion des Stations</a> |  <a href="/admin/hydromet/observation/">Gestion des Observations</a></p>
     </div>
-    <div class="span4" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
-        <img class="pull-left"  src="{% static "public/img/market-price.png" %}" width="100" hieght="100">
-        <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">23<br><small>Marchés Observés</small></h1>
+
+    <div class="span3" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
+            <img style="margin-right: 20px;" class="pull-left" src="{% static "public/img/agents.png" %}" width="100" hieght="100">
+            <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">{{ observers_qt }}<br><small>Observateurs</small></h1>
+            <hr>
+            <p style="text-align: center; margin:0"><a href="/admin/hydromet/observateurhydromet/">Gestion des Observateurs</a> | <a href="/admin/hydromet/log/">Log</a></p>
+    </div>
+
+    <div class="span3" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
+        <img class="pull-left"  src="{% static "public/img/map_marker.png" %}" width="90" hieght="100">
+        <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">{{ prefectures_qt }}<br><small>Préfectures</small></h1>
         <hr>
-            <p style="text-align: center; margin:0"><a href="/admin/prix_marche/marche/">Gestion des Marchés</a> | <a href="/admin/prix_marche/observationdeprix/">Gestion des Observations de Prix</a> </p>
+            <p style="text-align: center; margin:0"><a href="/admin/base/limite/">Gestion des Limites</a> | <a href="/admin/base/typelimite/">Types de Limites</a> </p>
     </div>
-    <div class="span4" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
+    <div class="span3" style="background-color: rgba(255,255,255,.9); padding: 10px; border-radius: 5px">
         <img class="pull-left"  src="{% static "public/img/users.png" %}" width="100" hieght="100">
-        <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">11<br><small>Personnes Ressources</small></h1>
+        <h1 style="font-size: 5em; color: rgb(90,90,90); margin-top: 10px;">{{ users_qt }}<br><small>Utilisateurs</small></h1>
         <hr>
-            <p style="text-align: center; margin:0"><a href="/admin/base/personne/">Gestion des Personnes ressources</a> | <a href="/admin/base/observatoire/">Gestion des Observatoires</a></p>
+            <p style="text-align: center; margin:0"><a href="/admin/auth/user/">Gestion des Utilisateurs</a> | <a href="/admin/auth/group/">Gestion des Groupes</a></p>
     </div>
 
 </div>
@@ -34,28 +42,26 @@
 
 <div class="row-fluid">
 
-    <div class="span6">
-        <h1>Hydrométéorologie <small></small></h1>
-        
+    <div class="col-row-6">
 
-        <h2>Alertes et Notifications <br><small>en fonction des critères définies dans la section "<a href="/admin/hydromet/alerte/">Alertes Hydrométéorologie</a>"</small></h2>
+        <h2>Alertes et Notifications <br><small>en fonction des critères définies dans la section "<a href="/admin/hydromet/alertehydrometeorologique/">Alertes Hydrométéorologie</a>"</small></h2>
         <div class="alert alert-success">
                Aucune notification
         </div>
 
         <hr>
 
-        <h2>Suivi des Agents <small>N/A</small></h2>
+        <h2>Suivi des Observateurs <small>N/A</small></h2>
         <div class="alert alert-success">
-                <span class="badge badge-success pull-right">12</span> <a href="#" title="Voir la liste des agents concernés">Agents</a> ayant déjà transmis leurs observations aujourd'hui
+                <span class="badge badge-success pull-right">{{ observers_check_qt }}</span> <a href="#" title="Voir la liste des agents concernés">Observateurs</a> ayant déjà transmis leurs observations aujourd'hui
         </div>
 
         <div class="alert">
-                <span class="badge badge-warning pull-right">2</span> <a href="#" title="Voir la liste des agents concernés">Agents</a> n'ayant pas encore transmis leurs observations aujourd'hui
+                <span class="badge badge-warning pull-right">{{ observers_warning_qt }}</span> <a href="#" title="Voir la liste des agents concernés">Observateurs</a> n'ayant pas encore transmis leurs observations aujourd'hui
         </div>
 
         <div class="alert alert-error">
-                <span class="badge badge-important pull-right">1</span> <a href="#" title="Voir la liste des agents concernés">Agents</a> n'ayant transmis aucune observation depuis plus de deux jours
+                <span class="badge badge-important pull-right">{{ observers_error_qt }}</span> <a href="#" title="Voir la liste des agents concernés">Observateurs</a> n'ayant transmis aucune observation depuis plus de deux jours
         </div>
 
         <hr>
@@ -65,13 +71,6 @@
 
     </div>
 
-    <div class="span6">
-        <h1>Prix du Marché <small></small></h1>
-        <h2>Alertes et Notifications <br><small>en fonction des critères définies dans la section "<a href="/admin/hydromet/alerte/">Alertes Prix du Marché</a>"</small></h2>
-        <div class="alert alert-success">
-               Aucune notification
-        </div>
-    </div>
 </div>
 
 <script>
@@ -143,7 +142,7 @@
 			method: "POST",
 			type: 'json',
 			url: "/hydromet/chart_overview/",
-			data: { 'sel_dept': [1,2,3], 'sel_duree': '', 'sel_type_aggr': 'Sum', 'sel_type_duree': 'month', 'sel_type_observation': '1',},
+			data: { 'sel_dept': [], 'sel_duree': '', 'sel_type_aggr': 'Sum', 'sel_type_duree': 'day', 'sel_type_observation': '1',},
 			headers: { "X-CSRFToken":  Cookies.get("csrftoken")  },
 			success : function(data) {
 			    var chart =  $('#Chart').highcharts();
